tests/invalid/with_mut_stack_use.stderr
error[E0597]: `outside_string` does not live long enough
  --> $DIR/with_mut_stack_use.rs:21:23
   |
20 |     cell.with_dependent_mut(|_, dependent| {
   |                             -------------- value captured here
21 |         *dependent = &outside_string;
   |         --------------^^^^^^^^^^^^^^
   |         |             |
   |         |             borrowed value does not live long enough
   |         assignment requires that `outside_string` is borrowed for `'static`
22 |     });
23 | }
   | - `outside_string` dropped here while still borrowed
